--- a/app/task1/task1.html
+++ b/app/task1/task1.html
@@ -1,1 +1,17 @@
-<p>This is the partial for view 1.</p>
+<p>Task 1</p>
+
+<div ng-init="shared = 'shared value'"></div>
+
+<div ng-controller="ParentCtrl1">
+    ParentCtrl1: <input type="text" ng-model="shared"/> {{shared}}
+    <div ng-controller="ChildCtrl1">
+        ChildCtrl1: <input type="text" ng-model="shared"/> {{shared}}
+    </div>
+</div>
+
+<div ng-controller="ParentCtrl2">
+    ParentCtrl2: <input type="text" ng-model="shared"/> {{shared}}
+    <div ng-controller="ChildCtrl2">
+        ChildCtrl2: <input type="text" ng-model="shared"/> {{shared}}
+    </div>
+</div>
