--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/task1">task1</a></li>
+    <li><a href="#/task1">task 1</a></li>
+    <li><a href="#/task2">task 2</a></li>
   </ul>
 
   <div ng-view></div>
@@ -22,5 +23,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="task1/task1.js"></script>
+  <script src="task2/task2.js"></script>
+  <script src="task2/spoiler.derictive.js"></script>
 </body>
 </html>
