--- a/app/task2/spoiler.html
+++ b/app/task2/spoiler.html
@@ -1,5 +1,5 @@
-<div>
-    <a href="" ng-click="toggle()">{{spoilerName}}</a>
-    <div ng-transclude ng-show="isShowing"></div>
+<div class="spoiler">
+    <a href="" ng-click="toggle()" class="header">{{spoilerName}}</a>
+    <div ng-transclude ng-show="isShowing" class="body"></div>
 </div>
 
