Move spoiler directive to components folder

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,11 @@
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+
   <script src="app.js"></script>
   <script src="task1/task1.js"></script>
   <script src="task2/task2.js"></script>
-  <script src="task2/spoiler.derictive.js"></script>
+
+  <script src="components/spoiler/spoiler.derictive.js"></script>
 </body>
 </html>
