--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <ul class="menu">
     <li><a href="#/task1">task 1</a></li>
     <li><a href="#/task2">task 2</a></li>
+    <li><a href="#/task3">task 3</a></li>
   </ul>
 
   <div ng-view></div>
@@ -22,10 +23,12 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
 
+  <script src="components/spoiler/spoiler.derictive.js"></script>
+
   <script src="app.js"></script>
+
   <script src="task1/task1.js"></script>
   <script src="task2/task2.js"></script>
-
-  <script src="components/spoiler/spoiler.derictive.js"></script>
+  <script src="task3/task3.js"></script>
 </body>
 </html>
