Task 3: use isolate scope for spoiler name

--- a/app/task2/task2.html
+++ b/app/task2/task2.html
@@ -3,7 +3,7 @@
 <spoiler on-spoiler-activated="loadDataForSpoiler1()">
     {{spoiler1}}
 
-    <spoiler name="Named spoiler" on-spoiler-activated="loadDataForSpoiler2()">
+    <spoiler on-spoiler-activated="loadDataForSpoiler2()">
         {{spoiler2}}
     </spoiler>
 </spoiler>
