--- a/app/task3/task3.html
+++ b/app/task3/task3.html
@@ -1,5 +1,6 @@
 <h2>Task 3</h2>
 
-<spoiler on-spoiler-activated="loadData()">
+<input type="text" ng-model="spoilerName">
+<spoiler name="spoilerName" on-spoiler-activated="loadData()">
     {{data}}
 </spoiler>
