--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <li><a href="#/task1">task 1</a></li>
     <li><a href="#/task2">task 2</a></li>
     <li><a href="#/task3">task 3</a></li>
+    <li><a href="#/task4">task 4</a></li>
   </ul>
 
   <div ng-view></div>
@@ -24,11 +25,14 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
 
   <script src="components/spoiler/spoiler.derictive.js"></script>
+  <script src="components/eventRaiser1/eventRaiser1.directive.js"></script>
+  <script src="components/eventRaiser2/eventRaiser2.directive.js"></script>
 
   <script src="app.js"></script>
 
   <script src="task1/task1.js"></script>
   <script src="task2/task2.js"></script>
   <script src="task3/task3.js"></script>
+  <script src="task4/task4.js"></script>
 </body>
 </html>
