--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <li><a href="#/task2">task 2</a></li>
     <li><a href="#/task3">task 3</a></li>
     <li><a href="#/task4">task 4</a></li>
+    <li><a href="#/task5">task 5</a></li>
   </ul>
 
   <div ng-view></div>
@@ -27,6 +28,9 @@
   <script src="components/spoiler/spoiler.derictive.js"></script>
   <script src="components/eventRaiser1/eventRaiser1.directive.js"></script>
   <script src="components/eventRaiser2/eventRaiser2.directive.js"></script>
+  <script src="components/user-service/user.service.js"></script>
+  <script src="components/user-info/user-info.directive.js"></script>
+  <script src="components/user-edit/user-edit.directive.js"></script>
 
   <script src="app.js"></script>
 
@@ -34,5 +38,6 @@
   <script src="task2/task2.js"></script>
   <script src="task3/task3.js"></script>
   <script src="task4/task4.js"></script>
+  <script src="task5/task5.js"></script>
 </body>
 </html>
