--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <li><a href="#/task3">task 3</a></li>
     <li><a href="#/task4">task 4</a></li>
     <li><a href="#/task5">task 5</a></li>
+    <li><a href="#/task6">task 6</a></li>
   </ul>
 
   <div ng-view></div>
@@ -39,5 +40,6 @@
   <script src="task3/task3.js"></script>
   <script src="task4/task4.js"></script>
   <script src="task5/task5.js"></script>
+  <script src="task6/task6.js"></script>
 </body>
 </html>
