--- a/app/task6/task6.html
+++ b/app/task6/task6.html
@@ -9,4 +9,7 @@
 
 <b>Ajax response: </b> {{ajaxResponse}} <br/>
 <a href="" ng-click="httpServiceCall()">Call via $http</a> <br/>
-<a href="" ng-click="xmlHttpRequestCall()">Call via XMLHttpRequest</a>
+<a href="" ng-click="xmlHttpRequestCall()">Call via XMLHttpRequest</a> <br/>
+<a href="" ng-click="xmlHttpRequestWithApply()">Call via XMLHttpRequest with $apply()</a> <br/>
+<a href="" ng-click="xmlHttpRequestWithDigest()">Call via XMLHttpRequest with $digest()</a> <br/>
+<a href="" ng-click="xmlHttpRequestWithPromise()">Call via XMLHttpRequest angular $q promise</a> <br/>
