Task 7: userList jquery plugin

--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,17 @@
     <li><a href="#/task4">task 4</a></li>
     <li><a href="#/task5">task 5</a></li>
     <li><a href="#/task6">task 6</a></li>
+    <li><a href="#/task7">task 7</a></li>
   </ul>
 
   <div ng-view></div>
 
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+
+  <script src="jquery-widgets/user-list/user-list.widget.js"></script>
 
   <script src="components/spoiler/spoiler.derictive.js"></script>
   <script src="components/event-raiser-1/event-raiser-1.directive.js"></script>
@@ -41,5 +46,6 @@
   <script src="task4/task4.js"></script>
   <script src="task5/task5.js"></script>
   <script src="task6/task6.js"></script>
+  <script src="task7/task7.js"></script>
 </body>
 </html>
