Task 7: userList directive

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <script src="components/user-service/user.service.js"></script>
   <script src="components/user-info/user-info.directive.js"></script>
   <script src="components/user-edit/user-edit.directive.js"></script>
+  <script src="components/user-list/user-list.directive.js"></script>
 
   <script src="app.js"></script>
 
