Task 7: add some labels to template

--- a/app/task7/task7.html
+++ b/app/task7/task7.html
@@ -1,5 +1,9 @@
+<h2>Task 7</h2>
+
+<p><b>Directive list:</b></p>
 <user-list selected-users="selectedUsers"></user-list>
 
+<p><b>Controller list:</b></p>
 <ul>
     <li ng-repeat="user in selectedUsers">
         {{user.name}}
